Fix dashboard deployment - correct image name and debug entrypoint
- Fixed image reference in dashboard-service.yaml from dashboard:latest to cost-monitor-dashboard:latest
- Removed manual virtual environment activation since PATH is set in Dockerfile
- Added debug output to diagnose Python environment issues

--- a/openshift/base/deployments/dashboard-service.yaml
+++ b/openshift/base/deployments/dashboard-service.yaml
@@ -30,7 +30,7 @@ spec:
           type: RuntimeDefault
       containers:
       - name: dashboard
-        image: default-route-openshift-image-registry.apps.ocpv-infra01.dal12.infra.demo.redhat.com/cost-monitor/dashboard:latest
+        image: cost-monitor-dashboard:latest
         imagePullPolicy: Always
 
         ports:
