Fix dashboard service endpoint issue - correct pod labels
- Change app label from 'dashboard-service' to 'cost-monitor' in deployment
- This matches the service selector expectations
- Fixes route showing no endpoints and dashboard being inaccessible
- Service will now properly route traffic to dashboard pods

--- a/openshift/base/deployments/dashboard-service.yaml
+++ b/openshift/base/deployments/dashboard-service.yaml
@@ -15,12 +15,12 @@ spec:
       maxSurge: 1
   selector:
     matchLabels:
-      app: dashboard-service
+      app: cost-monitor
       component: dashboard
   template:
     metadata:
       labels:
-        app: dashboard-service
+        app: cost-monitor
         component: dashboard
         tier: frontend
     spec:
