Implement comprehensive on-demand data collection system
- Add check_existing_data() to identify data gaps by provider and date
- Add get_missing_date_ranges() to efficiently group missing dates
- Add collect_provider_data() to fetch data from cloud APIs
- Add store_cost_data() to persist collected data with conflict resolution
- Add collect_missing_data() orchestration function
- Enhance get_cost_summary() endpoint to automatically trigger data collection
- Integrate provider factory and auth manager for multi-cloud support
- Add intelligent gap detection and caching for performance
- Enable truly on-demand cost data collection based on user requests
- Fix dashboard deployment strategy and image references
- Update gitignore to exclude credential directories

--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,7 @@ cython_debug/
 config/.secrets.yaml
 config/config.local.yaml
 config/local.yaml
+configs/.secrets/
 openshift/local/
 openshift/overlays/local/
 openshift/base/secrets/credentials.yaml
