Fix provider registration and add Azure subscription ID
- Import provider implementations in __init__.py to register with ProviderFactory
- Add AZURE_SUBSCRIPTION_ID environment variable to deployment
- This fixes 'Unknown provider' errors in data collection

--- a/openshift/base/deployments/cost-data-service.yaml
+++ b/openshift/base/deployments/cost-data-service.yaml
@@ -96,6 +96,11 @@ spec:
             secretKeyRef:
               name: azure-credentials
               key: tenant-id
+        - name: AZURE_SUBSCRIPTION_ID
+          valueFrom:
+            secretKeyRef:
+              name: azure-credentials
+              key: subscription-id
 
         resources:
           requests:
