Disable chart cache and add debug logging for bar chart troubleshooting

--- a/config/.secrets.yaml.template
+++ b/config/.secrets.yaml.template
@@ -15,15 +15,12 @@ clouds:
     region: "us-east-1"       # Cost Explorer requires us-east-1
 
   # Azure Credentials (from service principal 'cost-monitor')
+  # Note: Uses Azure Cost Management REST API directly - no storage account required
   azure:
     subscription_id: "..."    # Replace with your Azure Subscription ID
     tenant_id: "..."          # Replace with your Azure Tenant ID
     client_id: "..."          # Replace with your Service Principal Client ID
     client_secret: "..."      # Replace with your Service Principal Client Secret
-    export:
-      storage_account: "..."  # Replace with your Azure storage account name
-      export_name: "..."      # Replace with your Azure export name
-      container: "..."        # Replace with your Azure storage container name
 
   # GCP Credentials (from service account 'cost-monitor')
   gcp:
