Add Azure management groups configuration to deployment manifest
- Add CLOUDCOST__CLOUDS__AZURE__USE_MANAGEMENT_GROUPS=true to deployment
- Add CLOUDCOST__CLOUDS__AZURE__MANAGEMENT_GROUPS=rhpds-pool-00,rhpds-pool-01
- Update configuration system to handle management_groups as comma-separated list
- This enables comprehensive Azure scope by default in deployment manifests
- Configuration will persist through fresh deployments via deployment manifest

--- a/openshift/base/deployments/cost-data-service.yaml
+++ b/openshift/base/deployments/cost-data-service.yaml
@@ -119,6 +119,12 @@ spec:
               name: azure-credentials
               key: container
 
+        # Azure Management Groups Configuration
+        - name: CLOUDCOST__CLOUDS__AZURE__USE_MANAGEMENT_GROUPS
+          value: "true"
+        - name: CLOUDCOST__CLOUDS__AZURE__MANAGEMENT_GROUPS
+          value: "rhpds-pool-00,rhpds-pool-01"
+
         # GCP Configuration
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: "/etc/credentials/gcp/service-account.json"
