Add azure-mgmt-subscription dependency and remove blob storage dependency
- Added azure-mgmt-subscription>=3.1.0 for subscription discovery
- Removed azure-storage-blob as we no longer use blob storage
- Required for new individual subscription discovery functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,9 +24,9 @@ python-dateutil>=2.8.2
 # Error handling and retries
 tenacity>=8.2.3
 
-# Authentication
+# Azure SDK
 azure-identity>=1.15.0
-azure-storage-blob>=12.19.0
+azure-mgmt-subscription>=3.1.0
 
 # Caching
 diskcache>=5.6.3
