Remove specific Azure subscription_id to enable auto-discovery
- Removed CLOUDCOST__CLOUDS__AZURE__SUBSCRIPTION_ID environment variable
- This allows the Azure provider to auto-discover all 436+ subscriptions
- Instead of querying just one subscription (8e491577...), now queries all accessible subscriptions
- Should increase daily costs from ~ to expected 000+ range

--- a/openshift/base/deployments/cost-data-service.yaml
+++ b/openshift/base/deployments/cost-data-service.yaml
@@ -98,13 +98,7 @@ spec:
             secretKeyRef:
               name: azure-credentials
               key: tenant-id
-        - name: CLOUDCOST__CLOUDS__AZURE__SUBSCRIPTION_ID
-          valueFrom:
-            secretKeyRef:
-              name: azure-credentials
-              key: subscription-id
-
-        # Azure auto-discovers all available subscriptions
+        # Azure auto-discovers all available subscriptions (no specific subscription_id)
 
         # GCP Configuration
         - name: GOOGLE_APPLICATION_CREDENTIALS
